# quantum-chaos

./: .gitignore  README.md  old_quantum_bosons_ensemble.py  old_quantum_bosons_param_sweep.py  pyproject.toml  quantum_bosons.py  quantum_bosons_ensemble.py  quantum_bosons_param_sweep.py  quantum_dicke.py  quantum_ising.py  quantum_ising_ensemble.py  run_parameters.sh
boson_sampling/: look_data.py  make_data.py  run_parameters.sh
dicke/: make_data.py  quantum_dicke.py
fibonacci/: chaos_plots.py  tvd.py
kicked_bosons/: level_spacing_ratio.py  look_data.py  make_data.py  plot_level_spacing_ratio.py  run_level_spacing_ratio.sh  run_parameters.sh  run_tvd.sh  run_unitary_truncated.sh  save_unitary_truncated.py  scale_level_spacing_ratio.py  tvd.py  tvd_old.py  tvd_read.py
pauli_3body/: make_data.py
src/kicked_boson/: functions.py
src/kicked_boson/classical/: notes.py
src/kicked_boson/quantum/: dicke.py  ensemble.py  kicked_bosons.py  kicked_rotor.py  old_ensemble.py  operators.py  pauli_3body.py  system.py
src/quantum/: unitary.py
src/quantum_chaos/: functions.py  plotter.py  stats.py
src/quantum_chaos/quantum/: dicke.py  fibonacci_bosons.py  kicked_bosons.py  old_ensemble.py  pauli_3body.py  system.py
