[project]
name = "kicked-boson"
version = "0.0.1"
description = "Dynamics of quantum and classical kicked rotor model."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["quantum", "classical", "chaos", "boson"]
authors = [
  {name = "H. L. Nourse"}
]
dependencies = [
  "numpy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/thenoursehorse/kicked-boson"

[tool.setuptools]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"