[project]
name = "quantum-chaos"
version = "0.0.3"
description = "Dynamics and measures quantum chaos models."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["quantum", "classical", "chaos", "boson", "spin", "ising"]
authors = [
  {name = "H. L. Nourse"}
]
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "seaborn",
  "qutip",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/thenoursehorse/quantum-chaos"

[tool.setuptools]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"