[project]
name = "quantum-chaos"
dynamic = ["version"]
description = "Dynamics of and measures of quantum chaos models."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["quantum", "classical", "chaos", "boson", "spin", "ising"]
authors = [
  {name = "H. L. Nourse"}
]
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "seaborn",
  "qutip",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/thenoursehorse/quantum-chaos"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/quantum_chaos/version.py"
version.fallback-version = "0.0.0"